namespace MineSweeper
{
    public interface IStageFailCallback 
    {
        void OnFail();
    }
}