namespace MineSweeper
{
    public interface IStageSuccessCallback
    {
        void OnSuccess();
    }
}